--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,23 +4,17 @@
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link href="/fontello.css">
-  <link href="/fontello-codes.css">
-  <link href="/fontello-embedded.css">
-
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="/stylesheets/fontello.css" >
+  <link rel="stylesheet" href="/stylesheets/fontello-embedded.css">
 
   <link href="/stylesheets/application.css" rel="stylesheet">
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src ="/javascript/baguetteBox.min.js"></script>
-  <link href="/stylesheets/baguetteBox.min.css" rel="stylesheet">
 
   <script src="/javascript/platform.js"></script>
   <script src="/javascript/webspeech.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
   <title>Caption it!</title>
 </head>
 <body>
