--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -120,7 +120,7 @@ IMG.displayed {
 
 .badge-count {
   background-color: #0099CC;
-  margin-left: 8px;
+  /*margin-left: 8px;*/
 }
 
 .vote-badge{
@@ -202,11 +202,9 @@ IMG.displayed {
   }
 
 .btn-form1{
-  Margin: 0 auto;
-  margin-top: 0px;
-  float: right;
   font-size: 15px;
-  padding: 5px 5px 5px 5px;
+  padding: 5px 20px;
+  border-radius: 10px;
   }
 
 .img-logo{
