--- a/public/stylesheets/fontello.css
+++ b/public/stylesheets/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('/fontello.eot?35022094');
-  src: url('/fontello.eot?35022094#iefix') format('embedded-opentype'),
-       url('/fontello.woff?35022094') format('woff'),
-       url('/fontello.ttf?35022094') format('truetype'),
-       url('/fontello.svg?35022094#fontello') format('svg');
+  src: url('../fontello.eot?35022094');
+  src: url('../fontello.eot?35022094#iefix') format('embedded-opentype'),
+       url('../fontello.woff?35022094') format('woff'),
+       url('../fontello.ttf?35022094') format('truetype'),
+       url('../fontello.svg?35022094#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
